@@ -4,4 +4,4 @@ wash:
 	$(PWD)/wash_calculator.py $(L) HOOL HOOLB
 
 test:
-	nosetests $(PWD)
+	pytest $(PWD)
